# FanCode-Hls-Fetcher

./: .gitignore  Fancode_Live.m3u  Fancode_hls_m3u8.Json  LICENSE  README.md  cache.db  decrypt.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
tests/: conftest.py  test_setup_validation.py
